Updated CSS and JS to have the facility for hightlighted lines.

--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,7 @@
 		</div>
 
 		<div id="linenos"></div>
+		<div id="line-highlights"></div>
 		<pre id="box" style="display:none;" tabindex="0"><code></code></pre>
 		<textarea spellcheck="false" style="display:none;"></textarea>
     
