--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,7 @@
 				<div class="new function"></div>
 				<div class="duplicate function"></div>
 				<div class="raw function"></div>
+				<div class="comment function"></div>
 				<div class="twitter function"></div>
 			</div>
 			<div id="box3" style="display:none;">
@@ -34,6 +35,9 @@
 
 		<div id="linenos"></div>
 		<div id="line-highlights"></div>
+		<div id="comment-input">
+			<input name="comment"/>
+		</div>
 		<pre id="box" style="display:none;" tabindex="0"><code></code></pre>
 		<textarea spellcheck="false" style="display:none;"></textarea>
     
