Enhanced comment field and added icons and line number jumping.

--- a/static/index.html
+++ b/static/index.html
@@ -33,10 +33,13 @@
 			</div>
 		</div>
 
-		<div id="linenos"></div>
+		<div id="gutter">
+			<div id="linenos"></div>
+		</div>
 		<div id="line-highlights"></div>
 		<div id="comment-input">
-			<input name="comment"/>
+			<span></span>
+			<div class="cwrap"><input name="comment" id="new-comment"/></div>
 		</div>
 		<pre id="box" style="display:none;" tabindex="0"><code></code></pre>
 		<textarea spellcheck="false" style="display:none;"></textarea>
