Shift-click now toggles line highlighting.

--- a/static/index.html
+++ b/static/index.html
@@ -32,9 +32,8 @@
 			</div>
 		</div>
 
-		<div id="gutter">
-			<div id="linenos"></div>
-		</div>
+		<div id="gutter"></div>
+		<div id="linenos"></div>
 		<div id="line-highlights"></div>
 		<div id="comment-input">
 			<span></span>
